2024-01-07T08:09:52Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7436987556 # 1
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-07
* notice: last 14d: unq all: 4 6
* notice: prev accum: outdated-unq outdated-all / unq all: 300 470 / 301 471
* notice: next accum: outdated-unq outdated-all / unq all: 300 470 / 305 476
* notice: prev exec diff / last date diff / accum: unq all: +4 +5 -0 -0 / +3 +3 -0 -0 / 3 3
* notice: removed / changed dates: [] / [2024-01-01 2024-01-07]

2023-12-30T16:07:26Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7365061146 # 2179
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-30
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 299 469 / 301 471
* notice: next accum: outdated-unq outdated-all / unq all: 300 470 / 301 471
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-12-16] / []

2023-12-25T08:09:04Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7320288977 # 2163
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-25
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 299 469 / 300 470
* notice: next accum: outdated-unq outdated-all / unq all: 299 469 / 301 471
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-12-25]

2023-12-18T08:09:44Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7245279128 # 2142