@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-01-07T08:09:52Z",
-  "count_outdated" : 470,
-  "uniques_outdated" : 300,
+  "timestamp" : "2024-01-08T00:38:45Z",
+  "count_outdated" : 471,
+  "uniques_outdated" : 301,
   "count" : 476,
   "uniques" : 305,
   "clones" : [
-    {
-      "timestamp": "2023-12-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-01-01T00:00:00Z",
       "count": 2,
